# esp-deck

./: .gitignore  .gitmodules  BOUNCE_BUFFER_RENDERING.md  CMakeLists.txt  CMakePresets.json  PLANS.md  README.md  TROUBLESHOOTING.md  partitions.csv
cmake/: cyberdeck_component.cmake  get_cpm.cmake
components/display/: CMakeLists.txt  display_render.c  display_sdl.c  framebuffer.c  lcd_driver.c
components/display/include/: display.h  display_render.h
components/font/: CMakeLists.txt  font_renderer.c  terminus8x16.c  terminus8x16.h
components/font/include/: font.h
components/input/: CMakeLists.txt  Kconfig.projbuild  ble_keyboard.c  hid_keymap.c  hid_keymap.h  idf_component.yml  input_hal.c  input_hal_internal.h  input_uart.c  pairing_overlay.c  touch_input.c
components/input/include/: ble_keyboard.h  input_hal.h  pairing_overlay.h
components/libtsm/: CMakeLists.txt  spiram_alloc.h
components/libtsm/include/: libtsm.h
components/ssh/: CMakeLists.txt  ssh_client.c
components/ssh/include/: ssh_client.h
components/storage/: CMakeLists.txt  storage.c  storage_dev.c  storage_sim.c
components/storage/include/: storage.h
components/terminal/: CMakeLists.txt  ansi_parser.c  terminal.c
components/terminal/include/: terminal.h
components/tsm/: README.md
components/tsm/include/: tsm.h
components/tsm/src/: charsets.c  color.c  termstate.c  termstate.h  vtparse.c  vtparse.h
components/tsm_slim/: CMakeLists.txt
components/tsm_slim/include/: tsm_slim.h
components/tsm_slim/src/: charsets.h  color.c  color.h  termstate.c  termstate.h  vtparse.c  vtparse.h
components/vterm/: CMakeLists.txt  Kconfig.projbuild  vterm.c
components/vterm/include/: vterm.h
components/wifi/: CMakeLists.txt  wifi_manager.c  wifi_manager_sim.c
components/wifi/include/: wifi_manager.h
idfsim/: CMakeLists.txt  esp_attr.h  esp_check.h  esp_heap_caps.h  esp_netif.h  netdb.h  unistd.h
idfsim/freertos/: FreeRTOS.h  task.h
idfsim/sys/: socket.h
main/: CMakeLists.txt  Kconfig.projbuild  main.c  splash.c
main/include/: config.h  splash.h
sim/: CMakeLists.txt  LATENCY.md  main.c  splash.c
sim/idf_stubs/: esp_err.h  esp_log.h
tests/terminal/: CMakeLists.txt  test_terminal.c
tests/terminal/stubs/: display.h  display_stub.c  esp_attr.h  esp_err.h  esp_log.h
tests/tsm/: CMakeLists.txt  test_termstate.c  test_vtparse.c
tests/tsm_slim/: CMakeLists.txt  test_termstate.c  test_vtparse.c
