# Main component CMakeLists.txt
idf_component_register(
    SRCS
        "main.c"
        "splash.c"
    INCLUDE_DIRS
        "include"
    REQUIRES
        nvs_flash
        storage
        esp_wifi
        esp_netif
        esp_event
        bt
        esp_lcd
        driver
        display
        vterm
        ssh
        input
        wifi
        font
)
